# cuba

./: .dockerignore  .gitignore  Dockerfile  README.md  cli_openai.py  pyproject.toml
argo/rbac/: executor-for-default-sa.yaml  workflowtaskresults-executor.yaml
argo/workflows/: benchmark.yaml  smoke-test.yaml
examples/: chat_terminal.py  openai_client.py
k8s/: configmap.yaml  deployment.yaml  namespace.yaml  service.yaml
scripts/: benchmark_openai.py  cluster_smoke.sh  install_argo_workflows.sh  setup_local_cluster.sh  smoke_openai.sh
src/cuba/: __init__.py
src/cuba/engine/: __init__.py  batching.py
src/cuba/metrics/: __init__.py  collector.py
src/cuba/openai/: __init__.py  api.py  backend.py
src/cuba/ops/: __init__.py  dynamic_batching.py  load_balancing.py  memory_pool.py  production.py  streaming.py
src/cuba/runtime/: __init__.py  bootstrap.py
tests/: conftest.py  test_api.py  test_engine.py  test_metrics.py
